--- a/css/style.css
+++ b/css/style.css
@@ -685,10 +685,11 @@ nav .control {
     right: 10px;
   }
   .body-items .items-box .grid-items td .numpers span {
-    top: 13px;
+    top: 15px;
     right: 5px;
-    font-size: 12px;
+    font-size: 10px;
   }
+  .body-items .items-box .grid-items td .numpers img ,
   .body-items .items-box .grid-items td .overlay img {
     width: 30px;
     margin-bottom: 0;
@@ -704,6 +705,15 @@ nav .control {
     justify-content: start;
   }
   .body-items .items-box .grid-items td .overlay .content .count a {
+    font-size: 10px;
+  }
+  .body-items .items-box .grid-items td .title-prod {
+    font-size: 13px;
+  }
+  .body-items .items-box .grid-items td .pirc {
+    font-size: 16px;
+  }
+  .body-items .items-box .grid-items td .pirc span {
     font-size: 10px;
   }
 }
@@ -742,7 +752,7 @@ nav .control {
 .contcat .body-items .items-box .grid-items td img {
   width: 80px;
   z-index: 2;
-  margin-right: 30px;
+  margin-right: 35px;
 }
 .contcat .body-items .items-box .grid-items td i.fa-times {
   position: absolute;
@@ -825,7 +835,7 @@ nav .control {
     grid-template-columns: repeat(auto-fill, minmax(145px, 1fr));
   }
   .body-items .items-box .grid-items td img {
-    width: 60px;
+    width: 30px;
     padding: 10px 0;
   }
   .body-items,
@@ -853,9 +863,8 @@ nav .control {
     font-size: 18px;
   }
   .contcat .body-items .items-box .grid-items td img {
-    width: 60px;
+    width: 30px;
     z-index: -1;
-    margin-right: 0;
   }
 }
 /* End Section */
